--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strictPropertyInitialization": false,
-    // "baseUrl": "./src",
+    "baseUrl": "./src",
     // "rootDirs": ["./src"],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
